--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ content="DevJams,DevStack,DevTalks,Hackathons,VIT,Vellore,Devfest,Developer Stud
               
               <div class="grid-container">
                 <div class="grid-item">
-                  <figure class="imghvr-reveal-up" style="background-color:#3712dd;">
+                  <figure class="imghvr-reveal-up" style="background-color:#3712dd;width:250px">
                     <img src="./Assets/Swapnil_Borkar.jpeg">
                     <figcaption>
                       <h4 style="color:black; font-weight: 600;">Swapnil Borkar</h4>
@@ -185,22 +185,22 @@ content="DevJams,DevStack,DevTalks,Hackathons,VIT,Vellore,Devfest,Developer Stud
                   </figure>
                 </div>
                 <div class="grid-item">
-                  <figure class="imghvr-reveal-up" style="background-color:#3712dd;">
+                  <figure class="imghvr-reveal-up" style="height:250px">
                     <img src="./Assets/Senthilkumar_Murugesan.jpeg">
                     <figcaption>
                       <h4 style="color:black; font-weight: 600;">Senthil Murugesan</h4>
-                      <h6 style="color:#3712dd; font-weight: 600;">Co-Founder of JioVio healthcare</h6><br>
-                      <h7 style="color:black; font-weight: 200;">Senthilkumar has a great passion for innovating through Technology to solve real-life problems. He has filed nearly 10+ patents for the same.</h7>
+                      <h6 style="color:#3712dd; font-weight: 600;">Co-Founder of JioVio healthcare</h6>
+                      <h7 style="color:black; font-weight: 200;font-size:12px">Senthilkumar has a great passion for innovating through Technology to solve real-life problems. He has filed nearly 10+ patents for the same.</h7>
                     </figcaption>
                   </figure>
                 </div>
                 <div class="grid-item">
-                  <figure class="imghvr-reveal-up" style="background:transparent">
+                  <figure class="imghvr-reveal-up" style="background:transparent;width:250px">
                     <img src="./Assets/Punitma_Malhotra.jpeg">
                     <figcaption style="background-color:transparent">
                       <h4 style="color:black; font-weight: 600;">Punitma Malhotra</h4>
                       <h6 style="color:#3712dd; font-weight: 600;">Founder of blue Astral</h6>
-                      <br><br>
+                      <br>
                       <h8 style="color:black; font-weight: 200;">Punitma is not only a dedicated SW engineer. She has the skills to win your hearts and the ability to lead a team!</h8>
                     </figcaption>
                   </figure>
