social links fixed

--- a/index.html
+++ b/index.html
@@ -384,22 +384,30 @@ content="DevJams,DevStack,DevTalks,Hackathons,VIT,Vellore,Devfest,Developer Stud
                 <div class="handles">
                     <div class="row">
                         <div class="col left">
+                          <nobr>
                           <img src="./Assets/instagram.png" alt="">
                           <a href="https://instagram.com/dscvitvellore">instagram.com/dscvitvellore</a>
+                        </nobr>
                         </div>
                         <div class="col">
+                        <nobr>
                           <img src="./Assets/twitter2.png" alt="">
                           <a href="https://twitter.com/dscvit">twitter.com/dscvit</a>
+                          </nobr>
                         </div>
                       </div>
                       <div class="row">
                         <div class="col left">
+                          <nobr>
                           <img src="./Assets/email.png" alt="">
                           <a href="https:/dscvitvellore@gmail.com">dscvitvellore@gmail.com</a>
+                        </nobr>
                         </div>
                         <div class="col">
+                          <nobr>
                           <img src="./Assets/facebook.png" alt="">
                           <a href="https://fb.com/dscvitvellore">fb.com/dscvitvellore</a>
+                        </nobr>
                         </div>
                       </div>
                 </div>
