speaker added and fixed

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ content="DevJams,DevStack,DevTalks,Hackathons,VIT,Vellore,Devfest,Developer Stud
             <br><br><br><br>
               <h1>Speakers</h1>
               
-              <div class="grid-container">
+              <div class="grid-container1">
                 <div class="grid-item">
                   <figure class="imghvr-reveal-up" style="background-color:#3712dd;width:250px">
                     <img src="./Assets/Swapnil_Borkar.jpeg">
@@ -180,12 +180,12 @@ content="DevJams,DevStack,DevTalks,Hackathons,VIT,Vellore,Devfest,Developer Stud
                       <h4 style="color:black; font-weight: 600;">Swapnil Borkar</h4>
                       <h6 style="color:#3712dd; font-weight: 600;">Product Designer at CleverTap</h6>
                       <br>
-                      <h8 style="color:black; font-weight: 200;">Swapnil borkar is a product Designer and as his friends tell him, is really rude when it comes to Design feedback.</h8>
+                      <h8 style="color:black; font-weight: 200;font-size:12px">Swapnil borkar is a product Designer and as his friends tell him, is really rude when it comes to Design feedback.</h8>
                     </figcaption>
                   </figure>
                 </div>
                 <div class="grid-item">
-                  <figure class="imghvr-reveal-up" style="height:250px">
+                  <figure class="imghvr-reveal-up" style="height:250px;width:250px">
                     <img src="./Assets/Senthilkumar_Murugesan.jpeg">
                     <figcaption>
                       <h4 style="color:black; font-weight: 600;">Senthil Murugesan</h4>
@@ -194,6 +194,8 @@ content="DevJams,DevStack,DevTalks,Hackathons,VIT,Vellore,Devfest,Developer Stud
                     </figcaption>
                   </figure>
                 </div>
+              </div>
+              <div class="grid-container1">
                 <div class="grid-item">
                   <figure class="imghvr-reveal-up" style="background:transparent;width:250px">
                     <img src="./Assets/Punitma_Malhotra.jpeg">
@@ -201,7 +203,17 @@ content="DevJams,DevStack,DevTalks,Hackathons,VIT,Vellore,Devfest,Developer Stud
                       <h4 style="color:black; font-weight: 600;">Punitma Malhotra</h4>
                       <h6 style="color:#3712dd; font-weight: 600;">Founder of blue Astral</h6>
                       <br>
-                      <h8 style="color:black; font-weight: 200;">Punitma is not only a dedicated SW engineer. She has the skills to win your hearts and the ability to lead a team!</h8>
+                      <h8 style="color:black; font-weight: 200;font-size:12px">Punitma is not only a dedicated SW engineer. She has the skills to win your hearts and the ability to lead a team!</h8>
+                    </figcaption>
+                  </figure>
+                </div>
+                <div class="grid-item">
+                  <figure class="imghvr-reveal-up" style="width:250px">
+                    <img src="./Assets/sandeep.jpeg">
+                    <figcaption>
+                      <h4 style="color:black; font-weight:600;">Sandeep Khurana</h4>
+                      <h6 style="color:#3712dd; font-weight:600;">Reasearch Scholar at ISB</h6>
+                      <h7 style="color:black; font-weight:200;font-size:12px">From being an ex-army officer to managing large projects in the IT sector in India and the US, Sandeep is an Inspirational multifaceted role model</h7>
                     </figcaption>
                   </figure>
                 </div>
